fixed paddings on mobile sections

--- a/src/sass/_swiper.scss
+++ b/src/sass/_swiper.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   @extend %flex-centered;
-  @include media(padding-top, 25px, 70px, 120px);
+  @include media(padding-top, 50px, 70px, 120px);
 }
 
 .swiper-slide {
